RrsDoRegisEmailCheck.java, RrsDate.java, RegistrationUser.java:   Use Integer.parseInt(...) and Integer.valueOf(...) instead of   variants which would involve unnecessary constructor calls.